Editado e padroizado a View editora

--- a/Sistema LibBug/src/View/Editora.form
+++ b/Sistema LibBug/src/View/Editora.form
@@ -72,7 +72,7 @@
     <Container class="javax.swing.JTabbedPane" name="abas">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="0" green="0" red="0" type="rgb"/>
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
 
